# MarkDown-editor

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
V 0.2.0/: .gitignore  README.md  VERSION.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
V 0.2.0/.github/workflows/: ci.yml
V 0.2.0/docs/: MOBILE.md
V 0.2.0/scripts/: build-all-versions.ps1
V 0.2.0/src/: App.tsx  index.css
V 0.2.0/src-tauri/: Cargo.toml  tauri.conf.json
V 0.2.0/src-tauri/icons/: icon.icns
V 0.2.0/src-tauri/src/: commands.rs  lib.rs  main.rs  updater.rs  vault.rs
V 0.2.0/src/extensions/: block-reference.ts  callout.ts  colored-code-block.ts  embed.ts  markdown-marks.ts  math-block.ts  math-inline.ts  paragraph-block.ts  table-extended.ts  tag-mark.ts  wiki-link.ts
V 0.2.0/src/lib/: block-markdown.ts  block-sync.ts  block-utils.ts  inline-markdown.ts  link-attrs.ts  markdown-transform.ts  markdown.ts  suggestion-renderer.ts  table-markdown.ts  tauri-api.ts  types.ts  wiki-link-serialize.ts
V 0.2.0/src/stores/: app-store.ts  editor-store.ts
docs/: PLUGINS.md
scripts/: publish-github.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  search.rs  vault.rs  watcher.rs
src/components/backlinks/: BacklinksPanel.tsx
src/components/editor/: EditorToolbar.tsx  FrontmatterEditor.tsx  MarkdownEditor.tsx
src/extensions/: tag-mark.ts  wiki-link.ts
src/lib/: markdown.ts  tauri-api.ts  types.ts
src/plugins/: registry.ts
src/stores/: app-store.ts
(+32 files in other folders)
