[package]
name = "markdown-editor"
version = "0.2.0"
description = "MarkDown Editor - WYSIWYG markdown editor with Obsidian-style vault"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
